--- a/04 - Array Cardio Day 1/arrays1.html
+++ b/04 - Array Cardio Day 1/arrays1.html
@@ -37,17 +37,29 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    let fifteen = inventors.filter( inventor => (inventor.year>=1500 && inventor.year<1600 ? true : false));
+    console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    let firstLast = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.log(firstLast);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    let oldest = inventors.sort((a,b) => a.year > b.year ? 1 : -1)
+    console.table(oldest);
+    
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    let totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+    console.log(totalYears);
 
     // 5. Sort the inventors by years lived
+    let yearsLived = inventors.sort((a,b) => (a.passed - a.year) > (b.passed - b.year) ? 1 : -1)
+    console.table(yearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
