--- a/08 - Fun with HTML5 Canvas/canvas.html
+++ b/08 - Fun with HTML5 Canvas/canvas.html
@@ -7,6 +7,42 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+  let canvas = docuent.querySelector('#draw');
+  let ctx = canvas.getContext('2d');
+
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  ctx.strokeStyle = '#BADA55';
+  ctx.lineJoin = 'round';
+  ctx.lineCap = 'round';
+
+  let isDrawing = false;
+  let lastX = 0;
+  let lastY = 0;
+  let hue = 0;
+
+  function draw (event) {
+    if(!isDrawing) return;
+    ctx.beginPath();
+    ctx.moveTo(lastX, lastY);
+    ctx.lineTo(e.offsetX, e.offsetY);
+    ctx.stroke();
+    ctx.strokeStyle = `hsl(${hue},100,50)`;
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+    hue ++;
+    if (hue >= 360) {
+      hue = 0;
+    }
+  }
+
+  canvas.addEventListener('mousemove', draw);
+  canvas.addEventListener('mousedown',(e) => {
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+    isDrawing = true;})
+  canvas.addEventListener('mouseup', () => isDrawing = false);
+  canvas.addEventListener('mouseout', () => isDrawing = false);
+
 </script>
 
 <style>
